# quantum-ml

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: pipeline.yaml
src/: config.py  main.py  schema.py
src/classical/: ensemble.py  logistic.py  mlp.py  random_forest.py  tabicl.py  xgboost_model.py
src/data/: loader.py  pipeline.py
src/models/: base.py
src/quantum/: encoding.py  kernel.py  svm.py  vqc.py
src/viz/: eda.py  evaluation.py
